# ip_msc

./: CMakeLists.txt  base.cpp  base.h  opencl.cpp  opencl.h  opengl.cpp  opengl.h  python.cpp  test.cpp
cmd/: main.py
gui/: glWidget.py  main.py  paramWidget.py
pdf/: thesis.tex
src/: base.cpp  ccuda.cpp  ccuda.h  opencl.cpp  opengl.cpp  opengl.h  python.cpp
test/: test.cpp
tex/: discussion.tex  ref.tex  thesis.tex
tex/ch1/: background.tex  intro.tex  limitations.tex  purpose.tex  structure.tex
tex/ch2/: cuda.tex  enviroments.tex  opencl.tex
tex/ch3/: build.tex  core.tex  implementation.tex
tex/ch4/: testcases.tex
